Add tests and remove webview message viewer