@@ -3,11 +3,13 @@ package com.faforever.client.builders;
 import com.faforever.client.chat.emoticons.Emoticon;
 import javafx.scene.image.Image;
 
-import java.util.Arrays;
+import java.util.List;
 
 public class EmoticonBuilder {
 
-  private final Emoticon emoticon = new Emoticon();
+  private List<String> shortcodes;
+  private String base64SvgContent;
+  private Image image;
 
   public static EmoticonBuilder create() {
     return new EmoticonBuilder();
@@ -20,21 +22,21 @@ public class EmoticonBuilder {
   }
 
   public EmoticonBuilder shortcodes(String... shortcodes) {
-    emoticon.setShortcodes(Arrays.asList(shortcodes));
+    this.shortcodes = List.of(shortcodes);
     return this;
   }
 
   public EmoticonBuilder base64SvgContent(String base64SvgContent) {
-    emoticon.setBase64SvgContent(base64SvgContent);
+    this.base64SvgContent = base64SvgContent;
     return this;
   }
 
   public EmoticonBuilder image(Image image) {
-    emoticon.setImage(image);
+    this.image = image;
     return this;
   }
 
   public Emoticon get() {
-    return emoticon;
+    return new Emoticon(shortcodes, base64SvgContent, image);
   }
 }
